<resources>
    <string name="app_name">SuperAndroidProject</string>
    <string name="buttons">Buttons</string>
    <string name="layouts">Layouts</string>
    <string name="texts">Texts</string>
    <string name="linear">Linear</string>
    <string name="constraint">Constraint</string>
    <string name="frame">Frame</string>
    <string name="title_activity_relative">Relative</string>
    <string name="title_activity_frame">Frame</string>
    <string name="login">Login</string>
</resources>
