<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/btn_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttons" />

    <Button
        android:id="@+id/btn_layouts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/layouts" />

    <Button
        android:id="@+id/btn_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texts" />


</LinearLayout>