<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LayoutActivity">

    <Button
        android:text="@string/linear"
        android:id="@+id/btn_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="Relative"
        android:id="@+id/btn_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="Table"
        android:id="@+id/btn_table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/frame"
        android:id="@+id/btn_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/constraint"
        android:id="@+id/btn_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>